feat(editor mobile ui): editor添加Icon组件物料 Icon组件和Image组件优化 todoList示例优化

--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx", "./types"],
   "exclude": ["./src/__tests__/*", "./esm/*", "./lib/*"]
 }
