--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -60,7 +60,7 @@
     "@types/dateformat": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/hoist-non-react-statics": "^3.3.5",
-    "@types/node": "^17.0.45",
+    "@types/node": "*",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
