--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,8 +5,8 @@
     "module": "es6",
     "baseUrl": "./",
     "typeRoots": [
-      "node_modules/@types",
-      "types"
-    ]
-  }
+      "node_modules/@types"
+    ],
+  },
+  "include": ["./src", "./types"]
 }
