feat: 添加react refresh，修复ui组件使用Taro hooks报错问题

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -25,15 +25,8 @@
     "@rc-component/mini-decimal": "^1.1.0",
     "@rspack/cli": "^0.5.6",
     "@rspack/core": "^0.5.6",
+    "@rspack/plugin-react-refresh": "^0.5.9",
     "@swc/helpers": "^0.5.6",
-    "@tarojs/components": "3.6.24",
-    "@tarojs/helper": "3.6.24",
-    "@tarojs/plugin-framework-react": "3.6.24",
-    "@tarojs/react": "3.6.24",
-    "@tarojs/router": "3.6.24",
-    "@tarojs/runtime": "3.6.24",
-    "@tarojs/shared": "3.6.24",
-    "@tarojs/taro-h5": "3.6.24",
     "@types/lodash-es": "^4.17.12",
     "antd": "^5.15.0",
     "classname": "^0.0.0",
