--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "name": "lowcode-designable-taro-react",
   "dependencies": {
-    "@babel/core": "^7.24.3",
-    "@babel/runtime": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/runtime": "^7.24.4",
     "@formily/antd-v5": "1.1.9",
     "@formily/core": "2.3.1",
     "@formily/json-schema": "2.3.1",
@@ -14,38 +14,38 @@
     "@formily/shared": "2.3.1",
     "@kimeng/vm": "0.6.0",
     "@nutui/icons-react-taro": "^1.0.4",
-    "@nutui/nutui-react-taro": "^2.5.1",
+    "@nutui/nutui-react-taro": "^2.5.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@tarojs/components": "3.6.24",
-    "@tarojs/helper": "3.6.24",
-    "@tarojs/plugin-framework-react": "3.6.24",
-    "@tarojs/plugin-platform-alipay": "3.6.24",
-    "@tarojs/plugin-platform-h5": "3.6.24",
-    "@tarojs/plugin-platform-jd": "3.6.24",
-    "@tarojs/plugin-platform-qq": "3.6.24",
-    "@tarojs/plugin-platform-swan": "3.6.24",
-    "@tarojs/plugin-platform-tt": "3.6.24",
-    "@tarojs/plugin-platform-weapp": "3.6.24",
-    "@tarojs/react": "3.6.24",
-    "@tarojs/router": "3.6.24",
-    "@tarojs/runtime": "3.6.24",
-    "@tarojs/shared": "3.6.24",
-    "@tarojs/taro": "3.6.24",
-    "@tarojs/taro-h5": "3.6.24",
-    "@tarojs/taro-loader": "^3.6.25",
-    "@tarojs/webpack5-runner": "3.6.24",
-    "@types/react": "^18.2.73",
+    "@tarojs/components": "^3.6.26",
+    "@tarojs/helper": "^3.6.26",
+    "@tarojs/plugin-framework-react": "^3.6.26",
+    "@tarojs/plugin-platform-alipay": "^3.6.26",
+    "@tarojs/plugin-platform-h5": "^3.6.26",
+    "@tarojs/plugin-platform-jd": "^3.6.26",
+    "@tarojs/plugin-platform-qq": "^3.6.26",
+    "@tarojs/plugin-platform-swan": "^3.6.26",
+    "@tarojs/plugin-platform-tt": "^3.6.26",
+    "@tarojs/plugin-platform-weapp": "^3.6.26",
+    "@tarojs/react": "^3.6.26",
+    "@tarojs/router": "^3.6.26",
+    "@tarojs/runtime": "^3.6.26",
+    "@tarojs/shared": "^3.6.26",
+    "@tarojs/taro": "^3.6.26",
+    "@tarojs/taro-h5": "^3.6.26",
+    "@tarojs/taro-loader": "^3.6.26",
+    "@tarojs/webpack5-runner": "^3.6.26",
+    "@types/react": "^18.2.75",
     "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "babel-preset-taro": "3.6.24",
+    "babel-preset-taro": "^3.6.26",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-config-taro": "3.6.24",
+    "eslint-config-taro": "^3.6.26",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.34.1",
@@ -65,7 +65,7 @@
     "react-refresh": "0.11.0",
     "stylelint": "^14.16.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "ui-nutui-react-taro": "workspace:^"
   },
   "config": {
