fix: package.json

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -16,7 +16,7 @@
   },
   "private": true,
   "dependencies": {
-    "@babel/parser": "^7.24.0",
+    "@babel/parser": "^7.24.4",
     "@formily/grid": "^2.3.1",
     "@juggle/resize-observer": "^3.4.0",
     "@kimeng/vm": "0.6.0",
@@ -26,9 +26,9 @@
     "@rspack/cli": "^0.6.1",
     "@rspack/core": "^0.6.1",
     "@rspack/plugin-react-refresh": "^0.5.9",
-    "@swc/helpers": "^0.5.6",
+    "@swc/helpers": "^0.5.9",
     "@types/lodash-es": "^4.17.12",
-    "antd": "^5.15.0",
+    "antd": "^5.16.1",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "dateformat": "^4.6.3",
@@ -39,7 +39,7 @@
     "postcss-loader": "^7.3.4",
     "postcss-plugin-px2rem": "^0.8.1",
     "postcss-preset-env": "^7.8.3",
-    "preact": "^10.19.6",
+    "preact": "^10.20.2",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
@@ -49,13 +49,13 @@
     "ui-nutui-react-taro": "workspace:^"
   },
   "devDependencies": {
-    "@ant-design/icons": "^5.3.1",
+    "@ant-design/icons": "^5.3.6",
     "@types/dateformat": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/hoist-non-react-statics": "^3.3.5",
-    "@types/node": "*",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "css-loader": "^5.2.7",
@@ -64,7 +64,7 @@
     "eslint-config-taro": "3.6.24",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "file-loader": "^5.1.0",
@@ -82,9 +82,9 @@
     "ts-import-plugin": "1.6.1",
     "ts-loader": "^7.0.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.90.3",
-    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.2"
   }
 }
