--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -16,46 +16,45 @@
   },
   "private": true,
   "dependencies": {
-    "@babel/parser": "^7.24.4",
+    "@babel/parser": "^7.24.7",
     "@formily/grid": "^2.3.1",
     "@juggle/resize-observer": "^3.4.0",
     "@kimeng/vm": "0.6.0",
     "@monaco-editor/loader": "^1.4.0",
     "@monaco-editor/react": "^4.6.0",
     "@rc-component/mini-decimal": "^1.1.0",
-    "@rspack/cli": "^0.6.1",
-    "@rspack/core": "^0.6.1",
+    "@rspack/cli": "^0.6.5",
+    "@rspack/core": "^0.6.5",
     "@rspack/plugin-react-refresh": "^0.5.9",
-    "@swc/helpers": "^0.5.9",
+    "@swc/helpers": "^0.5.11",
     "@types/lodash-es": "^4.17.12",
-    "antd": "^5.16.1",
-    "classname": "^0.0.0",
+    "antd": "^5.18.3",
     "classnames": "^2.5.1",
     "dateformat": "^4.6.3",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.11",
     "less": "^4.2.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.45.0",
     "postcss-loader": "^7.3.4",
     "postcss-plugin-px2rem": "^0.8.1",
     "postcss-preset-env": "^7.8.3",
-    "preact": "^10.20.2",
-    "react": "^18.2.0",
+    "preact": "^10.22.0",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-refresh": "0.11.0",
     "requestidlecallback": "^0.3.0",
     "sass-loader": "^13.3.3",
     "ui-nutui-react-taro": "workspace:^"
   },
   "devDependencies": {
-    "@ant-design/icons": "^5.3.6",
+    "@ant-design/icons": "^5.3.7",
     "@types/dateformat": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/hoist-non-react-statics": "^3.3.5",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.77",
-    "@types/react-dom": "^18.2.25",
+    "@types/node": "*",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "css-loader": "^5.2.7",
@@ -64,8 +63,8 @@
     "eslint-config-taro": "3.6.24",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
@@ -76,13 +75,13 @@
     "pretty-quick": "^3.3.1",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "5.0.0",
-    "semver": "^7.6.0",
+    "semver": "^7.6.2",
     "string-similarity": "^4.0.4",
     "style-loader": "^1.3.0",
     "ts-import-plugin": "1.6.1",
     "ts-loader": "^7.0.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.91.0",
+    "webpack": "^5.92.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.2"
